# dlib

./: build.zig
dlib/: CMakeLists.txt
dlib/cmake_utils/: find_libwebp.cmake
dlib/cuda/: cpu_dlib.cpp  cpu_dlib.h  cuda_dlib.cu  cuda_dlib.h  tensor_tools.cpp  tensor_tools.h
dlib/dnn/: loss.h  solvers.h  solvers_abstract.h
dlib/image_loader/: webp_loader.cpp  webp_loader.h
dlib/test/: CMakeLists.txt  dnn.cpp
examples/: dnn_neural_style_transfer_ex.cpp  weights_visitor.h
